# OpenScreenStudio

./: .gitignore  AGENTS.md  CONTRIBUTION.md  README.md  index.html  package.json  repomix-output.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: deploy-site.yml  release.yml
scripts/: bump-version.ts  fetch-ffmpeg.sh  sign-cert.sh
site/: CNAME  index.html  main.js  styles.css
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_tap.rs  camera.rs  capture.rs  editor.rs  export.rs  lib.rs  main.rs  permissions.rs  picker.rs  project.rs
src/components/: CameraPreview.tsx  CaptureHUD.tsx  HudWindow.tsx  Permissions.tsx  PickerOverlay.tsx  hudIcons.tsx  icons.tsx
src/components/Editor/: ExportDialog.tsx  index.tsx
src/components/demo/: Spreadsheet.tsx
src/hooks/: useAccent.ts  useTheme.ts
src/lib/: autoZoom.ts  compositor.ts  compositorGL.ts  exporter.ts  native.ts
src/styles/: globals.css  tokens.css
