[package]
name = "openscreen-studio"
version = "0.1.0"
description = "Open-source screen recording studio"
authors = ["OpenScreen Studio contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openscreen_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
window-vibrancy = "0.6"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
screencapturekit = { version = "2", features = ["macos_15_0"] }

